accessibility fix - wider buttons, more contrast color on hover

--- a/src/features/control-panel/UI/ControlPanel.module.scss
+++ b/src/features/control-panel/UI/ControlPanel.module.scss
@@ -8,7 +8,7 @@
 
 $control-panel-height: 180px;
 
-$control-panel-background-color: #3f78ad;
+$control-panel-background-color: #0264b2;
 $control-panel-background-color-transparently: rgba(25, 28, 25, 0.98);
 
 $side-button-width: 16px;
@@ -128,6 +128,8 @@ $side-button-width: 16px;
   position: relative;
   z-index: 2001;
 
+  flex-grow: 1;
+
   svg {
     transition: transform 0.05s linear;
     transform: scale(1);
@@ -159,6 +161,8 @@ $side-button-width: 16px;
   position: relative;
   z-index: 2001;
 
+  flex-grow: 1;
+
   svg {
     transition: transform 0.08s ease;
     transform: scale(1);
@@ -189,7 +193,7 @@ $side-button-width: 16px;
   &:hover {
 
     svg {
-      color: red;
+      color: white;
     }
   }
 
